wip (wcl:buttons): corrections for button spacing in the toolbar

--- a/projects/wcl/src/components/buttons/buttons.scss
+++ b/projects/wcl/src/components/buttons/buttons.scss
@@ -10,7 +10,7 @@ $buttons-z-index: 99;
 }
 
 ::slotted(*) wx-button {
-  --padding-top: 0;
-  --padding-bottom: 0;
-  @include margin(0);
+  @include margin-horizontal(2px, 2px);
+  // --box-shadow: none;
+  // --height: 28px;
 }
